# Stream

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  cross-border-config.js  package-ci.json  package-lock.json  package.json  privacy.config.js
backend/src/: index.ts  login.test.ts  secure-remote.ts
core/: CMakeLists.txt  README.md  config.example.json
core/include/: AudioRecorder.h  Capture.h  ColorConvert.h  Encoder.h  HealthCheck.h  InputInjector.h  Logger.h  SignalingClient.h  WebRTCSession.h
core/src/: ColorConvert.cpp  HealthCheck.cpp  Logger.cpp  main.cpp
core/src/capture/: Capture_linux.cpp  Capture_mac.mm  Capture_win.cpp
core/src/encode/: Encoder_linux.cpp  Encoder_mac.mm  Encoder_win.cpp
core/src/input/: InputInjector_linux.cpp  InputInjector_mac.mm  InputInjector_win.cpp
core/src/linux/: ALSAVirtualMic.cpp  V4L2VirtualCamera.cpp
core/src/webrtc/: FrameVideoSource.cpp  FrameVideoSource.h  SignalingClient_ws.cpp  WebRTCSession.cpp
core/tests/: test_FrameVideoSource.cpp  test_core_pipeline.cpp
docs/: ARCHITECTURE.md  BUILD_AND_RUN.md  DEPENDENCIES.md  DEPLOYMENT.md  PRODUCTION_CHECKLIST.md  SECURITY.md
drivers/: README.md
drivers/linux/: README.md
drivers/macos/: README.md
drivers/windows/: README.md
scripts/: README.md  build_all.sh  build_webrtc.sh  installer_linux.sh  installer_mac.sh  installer_win.nsi
ui/: .env.example  Dockerfile  README.md  index.html  jest.config.js  main.cjs  main.js  package-lock.json  package.json  renderer.js  vite.config.ts
ui/src/: App.js  App.test.tsx  App.tsx  logger.js
ui/src/components/: NavBar.tsx  ProtectedRoute.tsx
ui/src/pages/: DashboardPage.tsx  HomePage.tsx  LoadingPage.tsx  LoginPage.tsx  NotFoundPage.tsx  SignupPage.tsx
